<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mark.cyberpunkplayer.ui.widget.DMarkToolbar
        android:id="@+id/new_session_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:text="@string/session_mark"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/target_ip_address"
                android:gravity="left|center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_session_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/ip"
                android:gravity="center"
                android:textColor="@color/custom_progress_blue_progress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/session_username"
                android:gravity="left|center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_session_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/username"
                android:gravity="center"
                android:textColor="@color/custom_progress_blue_progress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/session_password"
                android:gravity="left|center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_session_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/password"
                android:gravity="center"
                android:textColor="@color/custom_progress_blue_progress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/session_mark_name"
                android:gravity="left|center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_session_markname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/mark_name"
                android:gravity="center"
                android:textColor="@color/custom_progress_blue_progress"/>


            <Button
                android:id="@+id/new_session_commit"
                android:text="@string/commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lightblue_bt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_session_help"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_marginTop="@dimen/dp_10"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
